# photo-caption-agent

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
scripts/: run_agent.py  run_refine.py  run_tui.py
src/agent_flow/: config.py  genres.py  parsing.py  refinement_context.py
src/agent_flow/agents/: base.py  dialogue_completion_agent.py  refinement_agent.py  story_idea_agent.py  vision_agent.py
src/agent_flow/prompts/: dialogue.py  refinement.py  story_ideas.py
src/agent_flow/tui/: app.py  widgets.py
src/agent_flow/tui/screens/: base.py  input.py  refine.py  refined.py  results.py  story_ideas.py
tests/smoke/: test_agent.py  test_full_flow.py  test_refine_agent.py  test_story_idea_agent.py  test_vision_agent.py
